# goit-pythonweb-hw-06

./: README.md  connect.py  models.py  my_select.py  pyproject.toml  seed.py
